test_src/compiler_errors/types/binary/RightShiftFloatError4.b
class RightShiftFloatError4 {
    void test() {
        var value = 14.0;
        println(value >>= 6);
    }
}
